docroot/css/site.css
/* ... */
.centertablediv { display:table; margin:auto; }
.altauthspan { display:inline-block; padding:0px; width:60px; }
#closebookslide { clear:both; }

/* >> profile layout */
#proftopdiv { font-size:large; }
#profparticipatediv { }
#profpersonaldiv { padding:0px 0px 0px 10px; }
#profshoutdiv { padding:0px; }
#profcitydiv { font-size:small; padding: 0px 10px 5px 10px; }
#profinvitediv, #creategroupdiv { font-size:small; padding: 0px 10px 5px 10px; }
#wdydfunblogdiv { font-size:small; padding: 5px 10px 0px 20px; }
#srchpenslinkdiv { font-size:small; padding: 20px 0px 0px 30px; }
.profpic { max-width:125px; max-height:125px; }
#profpicdiv { width:130px; text-align:right; }
#picplaceholderdiv { color:#999999; font-size:small;
  height:125px; width:110px; padding:10px; text-align:left; }
/* fixed width and height on srchpic so the summary lines line up */
.srchpic { width:30px; height:30px; vertical-align:middle; }
.badgespan { display:inline-block; width:36px; height:36px; padding:1px; }
.reviewbadge, .reviewbadgedis { 
  width:30px; height:30px; vertical-align:middle; }
.reviewbadgedis { opacity:0.3; filter:alpha(opacity=30); }
.bbk1, .bbk5, .bbk10, .bbk20 { padding:4px; }
.bbk1  { background:url('../img/bbk1.png') no-repeat center center; }
.bbk5  { background:url('../img/bbk5.png') no-repeat center center; }
.bbk10 { background:url('../img/bbk10.png') no-repeat center center; }
.bbk20 { background:url('../img/bbk20.png') no-repeat center center; }
.followico { width:30px; height:30px; vertical-align:bottom; }
.followingico { width:20px; height:20px; vertical-align:middle; }
#profbadgestd { padding: 0px 10px 5px 10px; }
.revtypeselectiondiv { padding:15px; font-size:x-large; 
  font-family:"Penscript", "Verdana", "Arial", "Helvetica", sans-serif;
}
/* width dynamically modified in profile.styleShout */
.textareatd { }
.shoutout, .shoutoutstatic { text-align:left;
  font-family:"Verdana", "Arial", "Helvetica", sans-serif;
  font-size:small; }
.shoutout { width:160px; min-height:100px; }
.shoutoutstatic { padding:10px; }
#proftabsdiv { }
#proftabsul { }
#proftabsdiv ul { list-style:none; padding:0; margin:0; }
#proftabsdiv ul li { display:inline; 
  border-top-left-radius:5px; border-top-right-radius:5px;
  border-top:  1px solid #666;
  border-left: 1px solid #666;
  border-right: 1px solid #666;
 }
#proftabsdiv a { padding: 0 15px; }
.unselectedTab { border-bottom: 1px solid #666; }
.tabico { width:20px; height:20px; vertical-align:top; }
#profdisptable { }
#inlinkdiv { font-size:small; font-weight:normal; padding:10px; }
.headingtxt { font-size:large; font-weight:bold; text-align:center; }
.formstyle { font-size:small; }
.penlist { list-style:none; padding:0; margin:0; }
.sumtotal { font-size:small; }
#srchmessagespan { font-size:small; }
.smalltext { font-size:small; }
#revdispdiv { }
.reviewformul { list-style:none; padding:0; margin:0; }
.revdisptable { }
.revdisptable td { padding:2px 5px; }
#transformactionstd { padding:2px 5px 10px 15px; }
#revformbuttonstd { }
#revbuttonsdiv { margin-left:15%; padding:20px; }
#revbuttonsdiv button { margin:0px 10px; }
#revsavemsg { word-spacing:normal; }
#requestbuttonsdiv { text-align:center; padding:10px; }
.bluetxt { color:#7a40ff; }
.cyantxt { color:#40fff4; }
.greentxt { color:#6fff21; }
.goldtxt { color:#ffd100; }
#socialrevactdiv { }
#staticsocialrevactdiv { }
.revtitle { font-size:large; font-weight:bold; }
.revauthor { font-size:large; font-style:italic; }
.secondaryfield { font-style:italic; }
.revlist { list-style:none; padding:0; margin:0; }
.revlist li { padding:4px; }
.revimg { max-width:125px; height:auto; }
.revtextsummary { font-size:small; } /* padded in profile.reviewItemHTML */
.removeico { width:15px; height:15px; vertical-align:middle; }
.rslc { font-size:medium; }
.rslcbold { font-size:medium; font-weight:bold; }
.morerevs { font-size:small; padding: 0px 0px 0px 30px; }
.webjump { width:20px; height:20px; vertical-align:middle; border:none }
.csvstrdiv { padding:5px; }
.bigoverlabel { font-size:large; font-weight:bold; padding:25px 0px 0px 0px; }
#statnoticediv { background:#eee; padding:15px;
  font-family:"Verdana", "Arial", "Helvetica", sans-serif;
  font-size:small; text-align:center;
  border: 1px solid #666666; border-radius:10px; 
  box-shadow:10px 10px 5px #888888; }
.statnoticeactlinktable { margin-left:auto; margin-right:auto; padding:10px; }
.statnoticeactlinktable td { }
/* only actual buttons should look like buttons */
.buttondiv { padding:0px 5px; font-size:large; }
.sharebuttondiv { display:inline; }  /* see shareico for padding */
.searchtable td { padding:5px 10px; }
#userin, #passin { width:152px; }
.tagline { font-style:italic; color:#333; }
/* width: ratstar: 60, type: 50, nbsp separator and padding */
#starstd { text-align:right; width:150px; white-space:nowrap; }
.inlinestarsimg { vertical-align:bottom; }
.starsimg { vertical-align:middle; }
.permalink { font-size:xx-small; }
.actbuttons { padding:10px; }
#chpstatdiv { padding:10px; }
.buttontable { cursor:pointer; }
.buttontable:hover { text-decoration:underline; }
.buttontable td { padding:0px; }
.buttontabletexttd { text-align:left; font-size:large; }
.pennametable td { padding:0px 10px; }
.colorattrtd { font-size:small; text-align:right; }
.colorswatch { height:20px; width:40px; cursor:pointer; }
#colortitlediv { text-align:center; border-top: 1px solid #666; }
#revsavemsg { font-size:x-large; }
#fstatdescr { padding: 0px 0px 5px 60px; }
.hintText { font-size:small; font-style:italic; padding:20px; }
#relctrlsdiv { font-size:small; }
#followmodelinkdiv { padding:0px 20px; }
.poststatspan { font-size:small; color:#666; }
.reqlinkspan { font-size:small; }
.inlinkspan { background:url('../img/inlinkbg.png') no-repeat center center;
  height:19px; width:19px; display:inline-block; 
  text-align:center; font-size:14px; font-weight:bold; vertical-align:middle; }
.inbct { color:#666666; }

/* >> group layout */
#primgroupdlgdiv { padding:0px 10px; }
/* ... */

